src/test/deca/syntax/valid/declClass-withMain.deca
class A extends Boobs {
}

{
    int i = 3;
    float a = 5.6;
    println(i);
}