src/test/deca/syntax/invalid/declVar-instructionBeforeDeclaration.deca
{
    println(3);
    int a;
}